[package]
name = "convolve2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "rayon"]
std = []
full = ["std", "rayon", "image"]

[dependencies]
image = { version = "0.23.14", optional = true }
rayon = { version = "1.5.1", optional = true }

[dev-dependencies]
test-case = "1.2.1"
