[package]
name = "convolve2d"
version = "0.1.0"
authors = ["Joseph Skubal"]
edition = "2021"
repository = "https://gitlab.com/skubalj/convolve2d"
description = "Easy and extensible pure rust image convolutions"
readme = "README.md"
license = "MIT"
categories = ["algorithms", "computer-vision", "no-std"]
keywords = ["convolution", "convolve", "image"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "rayon"]
std = []
full = ["std", "rayon", "image"]

[dependencies]
image = { version = "0.23.14", optional = true }
rayon = { version = "1.5.1", optional = true }

[dev-dependencies]
convolve2d = { path = ".", features = ["full"] }  # Get all features for examples
structopt = "0.3.25"  # Used to parse arguments for examples
test-case = "1.2.1"
