[package]
name = "convolve2d"
version = "0.3.0"
authors = ["Joseph Skubal"]
edition = "2021"
repository = "https://github.com/skubalj/convolve2d"
description = "Easy and extensible pure rust image convolutions"
readme = "README.md"
license = "MIT"
categories = ["algorithms", "computer-vision", "no-std"]
keywords = ["convolution", "convolve", "image"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "rayon"]
std = []
full = ["std", "rayon", "image"]
image = ["dep:image"]
rayon = ["dep:rayon"]

[dependencies]
image = { version = "0.25.6", optional = true }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
convolve2d = { path = ".", features = ["full"] }  # Get all features for examples
clap = { version = "4.5.9", features= ["derive"] } # Used to parse arguments for examples
test-case = "1.2.1"
